--- a/win/PiskvorkyServer/PiskvorkyServer/PiskvorkyServer.vcproj
+++ b/win/PiskvorkyServer/PiskvorkyServer/PiskvorkyServer.vcproj
@@ -180,6 +180,10 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath="..\..\..\include\server\gameplay.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\include\server\global.h"
 				>
 			</File>
