--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -24,6 +24,8 @@ SOURCE_GROUP( "src"     FILES ${SOURCE} )
 ADD_EXECUTABLE( "${TARGET_NAME}"
                 ${INCLUDE} ${SOURCE} )
 
-TARGET_LINK_LIBRARIES( "${TARGET_NAME}" )
+TARGET_LINK_LIBRARIES( "${TARGET_NAME}" "${SDL_LIBRARY}" "${SDLNET_LIBRARY}" SDLmain )
 
 SET( ${TARGET_NAME}_INCLUDE_DIR "${TARGET_INCLUDE_DIR}" PARENT_SCOPE )
+
+INSTALL(TARGETS server DESTINATION bin)
