Fixed typos in CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,6 @@
-#
-# CMakeLists for CrossFive server
-#
-# Author: Bloody.Rabbit
-#
-
 CMAKE_MINIMUM_REQUIRED( VERSION 2.6 FATAL_ERROR )
 
-PROJECT( "efate" )
+PROJECT( "crossfive" )
 
 SET( CMAKE_MODULE_PATH
      "${PROJECT_SOURCE_DIR}/cmake"
@@ -14,5 +8,6 @@ SET( CMAKE_MODULE_PATH
 
 Find_Package ( SDL REQUIRED )
 Find_Package ( SDL_image REQUIRED )
+Find_Package ( SDL_net REQUIRED )
 
 ADD_SUBDIRECTORY( "src/server" )
